All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Lines</relationshipLabel>
    <relationshipName>Case_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>