All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed problem description</description>
    <label>Problem Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>