All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Entitlement_History__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement History</label>
    <referenceTo>Entitlement_History__c</referenceTo>
    <relationshipLabel>Case Lines</relationshipLabel>
    <relationshipName>Case_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>