All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Entitlement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Notes__c</fullName>
    <description>Notes entered by the user during entitlement verification</description>
    <label>Entitlement Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>