All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Status__c</fullName>
    <description>Outcome of entitlement check, if performed</description>
    <label>Entitlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>