All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Route_Card__c.field-meta.xml
<CustomField>
    <fullName>Route_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the calculated route for the line</description>
    <label>Route Card</label>
    <referenceTo>Route_Card__c</referenceTo>
    <relationshipLabel>Case Lines</relationshipLabel>
    <relationshipName>Case_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>