All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Service_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_End_Date__c</fullName>
    <description>Service Contract End Date from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
    <formula>Installed_Product__r.Service_Contract_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract End Date</label>
    <type>Date</type>
</CustomField>