All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Service_Contract_Exchange_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Exchange_Type__c</fullName>
    <description>Type of exchange allowed as per service contract. Created as a formula to run entitlement verification more efficiently</description>
    <formula>TEXT( Installed_Product__r.Service_Contract_Exchange_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract Exchange Type</label>
    <type>Text</type>
</CustomField>