All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Service_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Line__c</fullName>
    <description>Latest Service Contract Line from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
    <formula>Installed_Product__r.Service_Contract_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract Line</label>
    <type>Text</type>
</CustomField>