All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Brief summary of the problem with the product</description>
    <label>Problem Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>