All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <description>Latest warranty from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
    <formula>Installed_Product__r.Warranty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty</label>
    <type>Text</type>
</CustomField>