All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <description>Warranty End Date from Installed Product record. Created as a formula to run entitlement verification more efficiently</description>
    <formula>Installed_Product__r.Warranty_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>