All_Component_DX/force-app/main/default/objects/Case_Line__c/fields/Warranty_Exchange_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Exchange_Type__c</fullName>
    <description>Type of exchange allowed as per warranty. Created as a formula to run entitlement verification more efficiently</description>
    <formula>TEXT(Installed_Product__r.Warranty_Exchange_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Exchange Type</label>
    <type>Text</type>
</CustomField>